Add secrets and variables of Zigbee2MQTT and README update

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ influxdb/influxdb-data
 grafana/grafana-data
 mosquitto/mosquitto-data
 zigbee2mqtt/zigbee2mqtt-data
-myconfig/zigbee2mqtt
+myconfig/zigbee2mqtt/zigbee2mqtt-data/app/data/configuration.yaml
 secrets.yaml
